// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`R-084 P6-Kund:innen-Mails > R-084 M08 withdrawal_receipt (de) rendert ohne offene Tokens 1`] = `
"Dein Widerruf ist angekommen

Hallo Erika Beispiel,

Diese E-Mail bestätigt den Eingang deiner Widerrufserklärung. Sie ist noch keine Prüfung, ob der Widerruf wirksam ist.

Vorgangsnummer: WR-2026-00003
Eingegangen am: 12.10.2026, 14:03 Uhr (MESZ)

Deine Erklärung
---------------

Name: Erika Beispiel
Angaben zum Vertrag: PC-2026-00017
Betroffene Stücke: Nr. 017 · Tasse „Coco schläft“
Grund: Passt farblich doch nicht.
E-Mail: erika@example.com

So geht es weiter
-----------------

Bitte sende die Ware an: Jutta Beispiel · Planet Claire, Werkstattweg 7, 10999 Berlin. Die unmittelbaren Kosten der Rücksendung trägst du.

Die Erstattung bekommst du über dasselbe Zahlungsmittel, mit dem du bezahlt hast – spätestens 14 Tage nach Eingang deines Widerrufs (bis 26.10.2026). Ich darf sie zurückhalten, bis die Ware wieder bei mir ist oder du nachweist, dass du sie abgeschickt hast.

Bitte bewahre diese E-Mail auf – sie ist dein Nachweis für den Eingang.

Wie ich mit deinen Daten umgehe, steht in der Datenschutzerklärung:
Datenschutzerklärung: https://planetclairetattoos.com/de/datenschutz

Liebe Grüße
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Impressum: https://planetclairetattoos.com/de/impressum
Datenschutz: https://planetclairetattoos.com/de/datenschutz
Vertrag widerrufen: https://planetclairetattoos.com/de/vertrag-widerrufen
"
`;

exports[`R-084 P6-Kund:innen-Mails > R-084 M08 withdrawal_receipt (en) rendert ohne offene Tokens 1`] = `
"Your withdrawal has arrived

Hi Erika Beispiel,

This email confirms receipt of your notice of withdrawal. It does not yet confirm whether the withdrawal is valid.

Reference: WR-2026-00003
Received on: 12 Oct 2026, 14:03 (CEST)

Your declaration
----------------

Name: Erika Beispiel
Contract details: PC-2026-00017
Pieces concerned: No. 017 · Tasse „Coco schläft“
Reason: Passt farblich doch nicht.
Email: erika@example.com

What happens next
-----------------

Please send the goods to: Jutta Beispiel · Planet Claire, Werkstattweg 7, 10999 Berlin. You bear the direct costs of returning the goods.

You will receive the refund via the same means of payment you used – no later than 14 days after receipt of your withdrawal (by 26 Oct 2026). I may withhold it until I have received the goods back or you have provided proof that you have sent them.

Please keep this email – it is your proof of receipt.

How I handle your data is explained in the privacy policy:
Privacy policy: https://planetclairetattoos.com/en/privacy

Best wishes
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Legal notice: https://planetclairetattoos.com/en/legal-notice
Privacy policy: https://planetclairetattoos.com/en/privacy
Withdraw from contract here: https://planetclairetattoos.com/en/withdraw-from-contract
"
`;

exports[`R-084 P6-Kund:innen-Mails > R-084 M09 refund_confirmation (de) rendert ohne offene Tokens 1`] = `
"Dein Geld ist unterwegs

Hallo Erika Beispiel,

dein Widerruf WR-2026-00003 ist bearbeitet. Ich habe dir 40,40 € erstattet.

Bestellnummer: PC-2026-00017
Erstattet: 40,40 €

Erstattet für:

- Nr. 017 · Tasse „Coco schläft“

Darin enthalten: 2,40 € Versandkosten.

Das Geld geht auf dasselbe Zahlungsmittel zurück, mit dem du bezahlt hast. Je nach Bank dauert es meist 5–10 Werktage, bis du es siehst.

Die Gutschrift GS-2026-00002 hängt als PDF an.

Wie ich mit deinen Daten umgehe, steht in der Datenschutzerklärung:
Datenschutzerklärung: https://planetclairetattoos.com/de/datenschutz

Liebe Grüße
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Impressum: https://planetclairetattoos.com/de/impressum
Datenschutz: https://planetclairetattoos.com/de/datenschutz
Vertrag widerrufen: https://planetclairetattoos.com/de/vertrag-widerrufen
"
`;

exports[`R-084 P6-Kund:innen-Mails > R-084 M09 refund_confirmation (en) rendert ohne offene Tokens 1`] = `
"Your money is on its way

Hi Erika Beispiel,

your withdrawal WR-2026-00003 has been processed. I have refunded €40.40 to you.

Order number: PC-2026-00017
Refunded: €40.40

Refunded for:

- No. 017 · Tasse „Coco schläft“

This includes €2.40 shipping costs.

The money goes back to the same payment method you used. Depending on your bank it usually takes 5–10 working days until you see it.

The credit note GS-2026-00002 is attached as a PDF.

How I handle your data is explained in the privacy policy:
Privacy policy: https://planetclairetattoos.com/en/privacy

Best wishes
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Legal notice: https://planetclairetattoos.com/en/legal-notice
Privacy policy: https://planetclairetattoos.com/en/privacy
Withdraw from contract here: https://planetclairetattoos.com/en/withdraw-from-contract
"
`;

exports[`R-084 P6-Kund:innen-Mails > R-084 M12 complaint_repair_choice (de) rendert ohne offene Tokens 1`] = `
"Reparatur oder Ersatz – du hast die Wahl

Hallo Erika Beispiel,

danke für deine Nachricht zu deiner Bestellung PC-2026-00017. Es tut mir leid, dass mit deinem Stück etwas nicht stimmt.

Bestellnummer: PC-2026-00017
Reklamation eingegangen am: 16.10.2026
Art: beim Versand beschädigt

Betroffen:

- Nr. 017 · Tasse „Coco schläft“

Du kannst wählen, ob ich das Stück reparieren soll (Nachbesserung) oder ob du ein Ersatzstück möchtest (Ersatzlieferung). Die Kosten dafür, auch für den Versand, übernehme ich.

Weil jedes meiner Stücke ein Unikat ist, gibt es in der Regel kein gleiches Ersatzstück. Ist ein Ersatz nicht möglich, sprechen wir gemeinsam über die weiteren Möglichkeiten.

Wählst du die Reparatur, verlängert sich deine gesetzliche Gewährleistung für das Stück um 12 Monate.

Deine gesetzlichen Rechte bleiben unberührt.

Antworte einfach auf diese Mail und sag mir, was dir lieber ist.

Wie ich mit deinen Daten umgehe, steht in der Datenschutzerklärung:
Datenschutzerklärung: https://planetclairetattoos.com/de/datenschutz

Liebe Grüße
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Impressum: https://planetclairetattoos.com/de/impressum
Datenschutz: https://planetclairetattoos.com/de/datenschutz
Vertrag widerrufen: https://planetclairetattoos.com/de/vertrag-widerrufen
"
`;

exports[`R-084 P6-Kund:innen-Mails > R-084 M12 complaint_repair_choice (en) rendert ohne offene Tokens 1`] = `
"Repair or replacement – your choice

Hi Erika Beispiel,

thank you for your message about your order PC-2026-00017. I am sorry that something is wrong with your piece.

Order number: PC-2026-00017
Complaint received on: 16 Oct 2026
Type: damaged in transit

Affected:

- No. 017 · Tasse „Coco schläft“

You can choose whether I should repair the piece or whether you would like a replacement. I will cover the costs, including shipping.

Since every one of my pieces is one of a kind, an identical replacement is usually not possible. If a replacement is not possible, we will talk about the other options together.

If you choose the repair, your statutory liability period for defects for the piece is extended by 12 months.

Your statutory rights remain unaffected.

Just reply to this email and let me know what you prefer.

How I handle your data is explained in the privacy policy:
Privacy policy: https://planetclairetattoos.com/en/privacy

Best wishes
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Legal notice: https://planetclairetattoos.com/en/legal-notice
Privacy policy: https://planetclairetattoos.com/en/privacy
Withdraw from contract here: https://planetclairetattoos.com/en/withdraw-from-contract
"
`;

exports[`R-084 P6-Kund:innen-Mails > R-084 M13 dispute_vsbg (de) rendert ohne offene Tokens 1`] = `
"Hinweis zur Verbraucherschlichtung

Hallo Erika Beispiel,

leider konnten wir uns zu deiner Bestellung PC-2026-00017 nicht einigen. Das Gesetz sieht vor, dass ich dich in diesem Fall auf eine zuständige Verbraucherschlichtungsstelle hinweise.

Bestellnummer: PC-2026-00017
Reklamation eingegangen am: 16.10.2026

Zuständig ist die Universalschlichtungsstelle des Bundes, Zentrum für Schlichtung e. V., Straßburger Straße 8, 77694 Kehl am Rhein, www.universalschlichtungsstelle.de. Ich bin nicht bereit und nicht verpflichtet, an einem Streitbeilegungsverfahren teilzunehmen.

Wenn du noch Fragen hast, antworte einfach auf diese Mail.

Wie ich mit deinen Daten umgehe, steht in der Datenschutzerklärung:
Datenschutzerklärung: https://planetclairetattoos.com/de/datenschutz

Liebe Grüße
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Impressum: https://planetclairetattoos.com/de/impressum
Datenschutz: https://planetclairetattoos.com/de/datenschutz
Vertrag widerrufen: https://planetclairetattoos.com/de/vertrag-widerrufen
"
`;

exports[`R-084 P6-Kund:innen-Mails > R-084 M13 dispute_vsbg (en) rendert ohne offene Tokens 1`] = `
"Information on consumer dispute resolution

Hi Erika Beispiel,

unfortunately we could not reach an agreement about your order PC-2026-00017. In this case, the law requires me to inform you about a competent consumer dispute resolution body.

Order number: PC-2026-00017
Complaint received on: 16 Oct 2026

The competent body is the Universalschlichtungsstelle des Bundes, Zentrum für Schlichtung e. V., Straßburger Straße 8, 77694 Kehl am Rhein, www.universalschlichtungsstelle.de. I am neither willing nor obliged to participate in dispute resolution proceedings.

If you have any questions, just reply to this email.

How I handle your data is explained in the privacy policy:
Privacy policy: https://planetclairetattoos.com/en/privacy

Best wishes
Planet Claire

--
Jutta Beispiel · Planet Claire
Werkstattweg 7, 10999 Berlin
jutta@planetclairetattoos.com

Legal notice: https://planetclairetattoos.com/en/legal-notice
Privacy policy: https://planetclairetattoos.com/en/privacy
Withdraw from contract here: https://planetclairetattoos.com/en/withdraw-from-contract
"
`;
